# miden-agglayer

./: .dockerignore  .gitignore  .typos.toml  Cargo.toml  DB-LOCK-WIP.md  Dockerfile  Dockerfile.miden-node  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  PENDING-BRIDGES-ROLLUP-DISAMBIGUATION.md  README.md  docker-compose.e2e.yml  docker-compose.l2l2.yml  run-all.sh  run-regression.sh  rustfmt.toml
.claude/skills/test-bridging/: .gitignore  SKILL.md
.claude/skills/test-bridging-out/: .gitignore  SKILL.md
.claude/skills/test-bridging/claim-note/: Cargo.toml
.github/workflows/: check.yml  e2e-l2l2.yml  release.yml
axum-jrpc/: Cargo.toml
axum-jrpc/src/: error.rs  lib.rs
docs/: ARCHITECTURE.md  HYPOTHESES_VS_EVIDENCE.md  HYPOTHESIS_L1_TO_L2_STUCK.md  POSTMORTEM_2026-05-11_IAIC_TO_ADNF.md  POSTMORTEM_2026-07-04_STALE_ETH_BLOCKNUMBER.md  RECOVER_L1_TO_L2_BACKLOG.md  RECOVER_L1_TO_L2_BACKLOG_DIFF.md  REDEPLOY_RUNBOOK_BALI.md  RUNNING-E2E.md  SYNTHETIC-INDEXER-REDESIGN.md  UPGRADE.md  ger-decomposition.md  ger-note-screening-bypass.md  l2-to-l2-notes.md  regression-evidence-e2e-claim-watcher-synthesis.txt  regression-evidence-e2e-claim-watcher.txt  regression-evidence-e2e-dynamic-erc20.txt  regression-evidence-e2e-ger-decomposition.txt  regression-evidence-e2e-l1-to-l2.txt  regression-evidence-e2e-l2-to-l1-best-effort.txt  regression-evidence-e2e-l2-to-l1.txt  regression-evidence-e2e-rd862-repro.txt  regression-evidence-e2e-restore.txt  regression-evidence-e2e-security.txt  repro-evidence-20260518-1001.txt  repro-evidence-FIX-CURES.txt  repro-evidence-MAIN-FAILS.txt  repro-evidence-RESET-RESTORE-CURES.txt  repro-evidence-reset-restore-pass-1.txt  repro-evidence-reset-restore-pass-2.txt  repro-evidence-reset-restore-pass-3.txt  repro-evidence-self-heal-pass-1.txt  repro-evidence-self-heal-pass-2.txt  repro-evidence-self-heal-pass-3.txt  smoke-test-miden-sepolia-bali-testnet.md  smoke-test-report.html  smoke-test-sepolia-bali-miden-testnet.md  v0.3.0-FINAL-SUMMARY.md  v0.3.0-WHAT-IS-DONE.md
docs/bridge-monitor/bali/: index.html
docs/design/: RD-940-async-writer.md  UNIFIED-PROJECTOR.md
docs/development/: cantina-test-coverage.md  code-health-tooling.md  upgrade-157-orphan-recovery.md
docs/operations/: README.md  UPGRADE-v0.15.2.md  diagnostics.md  let-cardinality-gate.md  monitoring.md  quarantine.md  runbook.md
fixtures/: SovereignGER.sol  TestToken.sol  aggkit-config.toml  agglayer-config.toml  autoclaim-config.toml  bridge-config.toml
fixtures/genesis/: 02-with-account-files.toml
fixtures/genesis/02-with-account-files/: agglayer_faucet_eth.mac  agglayer_faucet_usdc.mac  bridge.mac
fixtures/l2b/: create_rollup_parameters.json  deploy_parameters.json
fixtures/l2b/l2b/: create_rollup_parameters.json
fixtures/patches/: 0001-node-store-callback-vault-key.patch  README.md
migrations/: 001_initial.sql  002_faucet_registry.sql  003_unclaimable_claims.sql  004_claim_watcher.sql  005_l1_indexer_cursor.sql  006_unbridgeable_bridge_outs.sql  007_monitor_state_persistence.sql  008_faucet_metadata.sql  008_faucet_origin_reservation.sql  008_raw_miden_height.sql  009_synthetic_projector.sql  010_queued_txns.sql  010_reconcile_cursor.sql  011_claim_mint_serials.sql  011_deposit_reservations.sql  011_nonce_reservations.sql  012_submission_handoffs.sql  013_l1_finalized_block.sql  014_finalized_verified.sql  015_l1_evidence_policy.sql  016_deposit_reservations.sql  017_b2agg_identity_backfill.sql  018_claim_mint_expected.sql  019_claim_calldata_repair_pending.sql  020_queued_txns.sql  021_orphan_recovery_backoff.sql
plans/: ger-decomposition-issue.md
scripts/: chaos-garbo.sh  chaos-seeder.sh  claim.sh  deposit.sh  e2e-account-reimport.sh  e2e-account-self-heal.sh  e2e-b2agg-atomic-commit.sh  e2e-bridge-loadtest-isolated.sh  e2e-bridge-loadtest.sh  e2e-cantina10-concurrent-faucet.sh  e2e-cantina12-getlogs-returns-all.sh  e2e-cantina12-getlogs-truncation.sh  e2e-cantina13-metadata-recovery.sh  e2e-cantina6-faucet-identity-restore.sh  e2e-chaos-soak.sh  e2e-claim-provenance.sh  e2e-claim-watcher-synthesis.sh  e2e-claim-watcher.sh  e2e-dynamic-erc20.sh  e2e-erased-note-hunt.sh  e2e-erased-note-recovery.sh  e2e-faucet-tripwire.sh  e2e-future-nonce-mempool.sh  e2e-fuzz-bridge.sh  e2e-ger-atomic-commit.sh  e2e-ger-decomposition.sh  e2e-ger-l1-verification.sh  e2e-iaic-mempool-conflict.sh  e2e-l1-to-l2.sh  e2e-l2-to-l1-autoclaim.sh  e2e-l2-to-l1-best-effort.sh  e2e-l2-to-l1.sh  e2e-l2-to-l2.sh  e2e-l2l2-back.sh  e2e-l2l2-clash.sh  e2e-l2l2-forward.sh  e2e-loadtest-mixed.sh  e2e-manual-user-claim.sh  e2e-miden-origin.sh  e2e-mint-monitor-provenance.sh  (+39 more)
scripts/monitoring/: README.md  immutability-monitor.py  soak-loop.sh  watch-completeness.sh
scripts/upgrade/: docker-compose.upgrade-release.yml
src/: account_recovery.rs  accounts_config.rs  address_mapper.rs  amount.rs  applied_state.rs  block_monitor.rs  block_num_tracker.rs  block_state.rs  bridge_address.rs  bridge_out.rs  bridge_out_recovery.rs  burn_serial_tracker.rs  claim.rs  claim_endpoint.rs  claim_settler.rs  claim_tracker.rs  claim_watcher.rs  exit.rs  expected_mint_tracker.rs  faucet_ops.rs  faucet_ownership_monitor.rs  faucet_registry_reconciler.rs  forged_mint_detector.rs  ger.rs  hex.rs  init.rs  l1_client.rs  l1_info_tree_indexer.rs  l2_to_l1_claimer.rs  let_divergence.rs  lib.rs  log_synthesis.rs  logging.rs  main.rs  metadata_recovery.rs  metrics.rs  miden_client.rs  mint_target_monitor.rs  nonce_tracker.rs  orphan_recovery.rs  (+21 more)
src/store/: memory.rs  migrator.rs  mod.rs  postgres.rs  postgres_tests.rs
tests/baselines/: baseline-rd862-repro.json
tools/bali-bridge-monitor/: index.html
tools/bridge-dashboard/: README.md
vendor-miden-agglayer/: .cargo_vcs_info.json  Cargo.toml  SPEC.md  build.rs
vendor-miden-agglayer/asm/components/: bridge.masm  faucet.masm
vendor-miden-agglayer/asm/note_scripts/: b2agg.masm  claim.masm  config_agg_bridge.masm  update_ger.masm
vendor-miden-agglayer/src/: b2agg_note.rs  bridge.rs  claim_note.rs  config_note.rs  faucet.rs  lib.rs  update_ger_note.rs
(+16 files in other folders)
