[package]
description = "Miden AggLayer integration service"
edition = "2024"
exclude = [".github/"]
license = "MIT"
name = "miden-agglayer-service"
readme = "README.md"
rust-version = "1.93"
version = "0.1.0"

[[bin]]
name = "miden-agglayer-service"
path = "src/main.rs"

[[bin]]
name = "bridge-out-tool"
path = "src/bin/bridge_out_tool.rs"

[[bin]]
name = "check-burn-root"
path = "src/bin/check_burn_root.rs"

[dev-dependencies]
tempfile = "3.10"

[profile.dev.package."*"]
opt-level = 1

[dependencies]
alloy = { features = [
  "consensus",
  "eips",
  "k256",
  "signers",
  "network",
], version = "1.5.2" }
alloy-core = { features = ["sol-types"], version = "1.5.2" }
alloy-rpc-types-eth = { version = "1.5.2" }

anyhow = { default-features = false, version = "1.0" }
async-trait = "0.1"
axum = { features = ["tokio"], version = "0.8" }
axum-jrpc = { path = "axum-jrpc" }
clap = { features = ["derive", "env"], version = "4.5" }
hex = { version = "0.4" }
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
http = { version = "1.3" }
lru = { default-features = false, version = "0.16" }
parking_lot = { version = "0.12" }
# Direct dep so we can surgically clear stale `locked` flags in miden-client's
# sqlite when a full --reset-miden-store would be overkill. Version matches
# what miden-client-sqlite-store pulls in transitively.
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { features = ["derive"], version = "1.0" }
serde_json = { version = "1.0" }
sha3 = { version = "0.10" }
thiserror = { default-features = false, version = "2.0" }
tokio = { features = ["macros", "rt-multi-thread", "signal"], version = "1.48" }
toml = { version = "0.9" }
tower = { version = "0.5" }
tower-http = { features = [
  "cors",
  "limit",
  "set-header",
  "trace",
], version = "0.6" }
tower_governor = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { features = [
  "env-filter",
  "fmt",
  "json",
], version = "0.3" }
url = { features = ["serde"], version = "2.5" }

# postgres (optional)
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }

# miden-base — exact pin to 0.14.4 to match the miden-node binary's
# transitive miden-assembly version (0.22.1). Different miden-assembly
# patch versions compute DIFFERENT MAST roots for the same MASM source:
#   miden-assembly 0.22.1 → BurnNote::script_root() = 0xdad2…
#   miden-assembly 0.22.3 → BurnNote::script_root() = 0x2777…
# When the two sides disagreed on the BURN root, every L2→L1 bridge-out
# failed inside the miden-node's NTX `before_created` event handler with
# "note script with root <X> not found in data store for public note"
# because StandardNote::from_script_root(0x2777) returns None when the
# node's BurnNote::script_root() is 0xdad2. Pinning miden-base to 0.14.4
# (instead of caret-0.14) forces cargo to resolve miden-assembly 0.22.1
# on this side too. Bump in lockstep with miden-node releases.
miden-base-agglayer = { package = "miden-agglayer", version = "=0.14.4" }
miden-protocol = { default-features = false, features = [
  "std",
], version = "=0.14.4" }
miden-standards = { default-features = false, version = "=0.14.4" }
miden-tx = { default-features = false, version = "=0.14.4" }

# miden-assembly/core MUST be pinned to 0.22.1 to match miden-node v0.14.10's
# transitive resolution. Empirically `BurnNote::script_root()` differs:
#   0.22.1 → 0xdad2020d27b388008dedb2dfa1952a1be7d45c9f8b8366ca734de06a07247f9e
#   0.22.3 → 0x277784547e6a93bbd3a6811dc3ed6bd29141011ae3066dc4319cbf10bb8ab89b
# Without these explicit pins cargo picks the latest 0.22.x, the proxy emits
# BURN at the 0.22.3 root, and the node's lookup misses. Bump in lockstep
# with miden-node releases.
miden-assembly = { default-features = false, version = "=0.22.1" }
miden-core = { default-features = false, version = "=0.22.1" }

# miden-client v0.14.7 (tagged release). Upstream backport of #2101 ships
# `GrpcClient::with_bearer_auth(token)` — the bearer-header API we need for
# gateway-fronted nodes (RD-856). Released 2026-05-06.
miden-client = { default-features = false, features = [
  "tonic",
], git = "https://github.com/0xMiden/miden-client.git", tag = "v0.14.7" }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client.git", tag = "v0.14.7" }

[features]
default = []
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
