[package]
description = "Miden AggLayer integration service"
edition = "2024"
exclude = [".github/"]
license = "MIT"
name = "miden-agglayer-service"
readme = "README.md"
rust-version = "1.93"
version = "0.1.0"

[[bin]]
name = "miden-agglayer-service"
path = "src/main.rs"

[[bin]]
name = "bridge-out-tool"
path = "src/bin/bridge_out_tool.rs"

[[bin]]
name = "check-burn-root"
path = "src/bin/check_burn_root.rs"

[dev-dependencies]
tempfile = "3.10"
# Used only by `r5_oversize_error_matches_aggsender_parser` to mirror aggkit's
# `ParseMaxRangeFromError` regex verbatim and pin the error-format contract.
regex = "1.10"

[profile.dev.package."*"]
opt-level = 1

[dependencies]
alloy = { features = [
  "consensus",
  "eips",
  "k256",
  "signers",
  "network",
], version = "1.5.2" }
alloy-core = { features = ["sol-types"], version = "1.5.2" }
alloy-rpc-types-eth = { version = "1.5.2" }

anyhow = { default-features = false, version = "1.0" }
async-trait = "0.1"
axum = { features = ["tokio"], version = "0.8" }
axum-jrpc = { path = "axum-jrpc" }
clap = { features = ["derive", "env"], version = "4.5" }
# RD-940 — concurrent in-flight tx-hash map for the async writer worker
# (DashMap chosen over RwLock<HashMap> for the hot eth_getTransactionByHash
# read path that touches it on every aggkit poll).
dashmap = { version = "6" }
hex = { version = "0.4" }
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
http = { version = "1.3" }
lru = { default-features = false, version = "0.16" }
parking_lot = { version = "0.12" }
# Direct dep so we can surgically clear stale `locked` flags in miden-client's
# sqlite when a full --reset-miden-store would be overkill. Version matches
# what miden-client-sqlite-store pulls in transitively.
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { features = ["derive"], version = "1.0" }
serde_json = { version = "1.0" }
sha3 = { version = "0.10" }
thiserror = { default-features = false, version = "2.0" }
tokio = { features = ["macros", "rt-multi-thread", "signal"], version = "1.48" }
# Used by the startup-time remote-prover reachability probe in `main.rs`. The
# miden-client crate already pulls tonic in via `features = ["tonic"]` so the
# transitive build pulls server + tls; this direct dep narrows the explicit
# surface to `channel` (client side, `Endpoint::from_shared(...).connect()`)
# plus `tls-native-roots` so the same TLS material works for prover URLs
# served via https://.
tonic = { default-features = false, features = [
  "channel",
  "tls-native-roots",
], version = "0.14" }
toml = { version = "0.9" }
tower = { version = "0.5" }
tower-http = { features = [
  "cors",
  "limit",
  "set-header",
  "trace",
], version = "0.6" }
tower_governor = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { features = [
  "env-filter",
  "fmt",
  "json",
], version = "0.3" }
# RD-940 — ULID for writer-worker job_id (sortable, no clock skew sensitivity
# vs UUIDv7; we already pull `getrandom` transitively via `alloy`/`rand`).
ulid = { version = "1" }
url = { features = ["serde"], version = "2.5" }

# postgres (optional)
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }

# Protocol 0.15.x migration. The conversion metadata moved off the faucet onto
# the bridge's `faucet_metadata_map` (CONFIG_AGG_BRIDGE note), `AccountStorageMode`
# became `AccountType{Private,Public}`, `create_claim_note`/`create_agglayer_faucet`
# were reshaped — see `feat/protocol-0.15-migration`. The base crates are released
# on crates.io at 0.15.2; the matching miden-client (0.15.0) is NOT yet tagged, so
# we track the upstream migration branch (PR 0xMiden/miden-client#2224) until a
# v0.15.x tag ships, at which point this pins back to the tag.
#
# MAST-root consistency note (carried over from the 0.14 pins): the proxy-side
# `BurnNote::script_root()` MUST match the miden-node binary's, or every L2→L1
# bridge-out fails in the node's NTX `before_created` handler with
# "note script with root <X> not found". The 0.15 base crates resolve
# miden-assembly/core 0.23.x; keep these in lockstep with the deployed
# miden-node v0.15.x release and tighten to an exact patch if a root mismatch
# resurfaces during the e2e regression.
miden-base-agglayer = { package = "miden-agglayer", version = "=0.15.2" }
miden-protocol = { default-features = false, features = [
  "std",
], version = "=0.15.2" }
miden-standards = { default-features = false, version = "=0.15.2" }
miden-tx = { default-features = false, version = "=0.15.2" }

miden-assembly = { default-features = false, version = "0.23" }
miden-core = { default-features = false, version = "0.23" }

# miden-client 0.15.0 — tracked via the upstream protocol-0.15 migration branch
# (PR 0xMiden/miden-client#2224) until a v0.15.x tag is published. Re-pin to the
# tag once it lands.
miden-client = { default-features = false, features = [
  "tonic",
], git = "https://github.com/0xMiden/miden-client.git", branch = "mmagician-claude/agglayer-v0.15" }
miden-client-sqlite-store = { git = "https://github.com/0xMiden/miden-client.git", branch = "mmagician-claude/agglayer-v0.15" }

[features]
default = []
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]

# LOCAL E2E TOPOLOGY PATCH: vendored miden-agglayer 0.15.2 with
# MIDEN_NETWORK_ID = 1 (upstream hardcodes 77 in the MASM; the Rust constant is
# generated from the MASM at build time). The local L1 fixture registers the
# Miden rollup as network 1, and the AggLayer pessimistic proof rejects
# certificates whose imported exits carry a different destination network
# (InvalidExitNetwork) — while the unpatched MASM rejects network-1 claims with
# ERR_CLAIM_LEAF_DESTINATION_NETWORK_MISMATCH. No single network id satisfies
# both ends with stock artifacts, so the local stack is made coherent at
# network 1 (the 0.14 topology). MUST be kept in lockstep with the identical
# vendored copy in the local 0xMiden/node checkout (script MAST roots must
# match the genesis bridge). Drop both copies once the Miden team's 0.15
# deployment reconciles the network id; question raised with them.
[patch.crates-io]
miden-agglayer = { path = "vendor-miden-agglayer" }
