[package]
description = "Miden AggLayer integration service"
edition = "2024"
exclude = [".github/"]
license = "MIT"
name = "miden-agglayer-service"
readme = "README.md"
rust-version = "1.93"
version = "0.1.0"

[[bin]]
name = "miden-agglayer-service"
path = "src/main.rs"

[[bin]]
name = "bridge-out-tool"
path = "src/bin/bridge_out_tool.rs"

[[bin]]
name = "check-burn-root"
path = "src/bin/check_burn_root.rs"

# Standalone L2->L1 auto-claimer. Discovers our rollup's exits from the proxy's
# own synthetic BridgeEvent (eth_getLogs), gates on the L1 bridge's on-chain
# isClaimed, fetches proofs from the bridge-service GetClaim path
# (/merkle-proof), and submits claimAsset on L1 with a sponsor wallet. See
# README "L2->L1 auto-claimer" for the full design + decision record.
[[bin]]
name = "bridge-autoclaim"
path = "src/bin/bridge_autoclaim.rs"

[dev-dependencies]
tempfile = "3.10"
# test-util enables tokio's paused virtual clock (start_paused) — used by the
# ger::poll_until_ready timing regression test to pin the exact sleep count
# deterministically (no real waiting, no tolerance windows).
tokio = { version = "1.48", features = ["test-util"] }
# Used only by `r5_oversize_error_matches_aggsender_parser` to mirror aggkit's
# `ParseMaxRangeFromError` regex verbatim and pin the error-format contract.
regex = "1.10"

[profile.dev.package."*"]
opt-level = 1

[dependencies]
alloy = { features = [
  "consensus",
  "eips",
  "k256",
  "signers",
  # bridge-autoclaim signs L1 claimAsset txns with a local sponsor key:
  # `signer-local` brings in `alloy::signers::local::PrivateKeySigner`,
  # `provider-http` + `reqwest` the HTTP transport, `rpc-types` the
  # TransactionReceipt status accessor.
  "signer-local",
  "provider-http",
  "reqwest",
  "rpc-types",
  "network",
], version = "1.5.2" }
alloy-core = { features = ["sol-types"], version = "1.5.2" }
alloy-rpc-types-eth = { version = "1.5.2" }

anyhow = { default-features = false, version = "1.0" }
async-trait = "0.1"
axum = { features = ["tokio"], version = "0.8" }
axum-jrpc = { path = "axum-jrpc" }
clap = { features = ["derive", "env"], version = "4.5" }
# RD-940 — concurrent in-flight tx-hash map for the async writer worker
# (DashMap chosen over RwLock<HashMap> for the hot eth_getTransactionByHash
# read path that touches it on every aggkit poll).
dashmap = { version = "6" }
hex = { version = "0.4" }
# 0.24.6 minimum: 0.24.5 (since yanked) shipped a broken KeyHasher — registry
# lookups missed on (almost) every emission, so /metrics rendered frozen gauges
# and non-cumulative counters (live-observed; see
# metrics::tests::metrics_from_second_runtime_render_cumulatively).
metrics = { version = "0.24.6" }
metrics-exporter-prometheus = { version = "0.16", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
http = { version = "1.3" }
lru = { default-features = false, version = "0.16" }
parking_lot = { version = "0.12" }
# Direct dep so we can surgically clear stale `locked` flags in miden-client's
# sqlite when a full --reset-miden-store would be overkill. Version matches
# what miden-client-sqlite-store pulls in transitively.
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { features = ["derive"], version = "1.0" }
serde_json = { version = "1.0" }
sha3 = { version = "0.10" }
thiserror = { default-features = false, version = "2.0" }
tokio = { features = ["macros", "rt-multi-thread", "signal"], version = "1.48" }
# Used by the startup-time remote-prover reachability probe in `main.rs`. The
# miden-client crate already pulls tonic in via `features = ["tonic"]` so the
# transitive build pulls server + tls; this direct dep narrows the explicit
# surface to `channel` (client side, `Endpoint::from_shared(...).connect()`)
# plus `tls-native-roots` so the same TLS material works for prover URLs
# served via https://.
tonic = { default-features = false, features = [
  "channel",
  "tls-native-roots",
], version = "0.14" }
toml = { version = "0.9" }
tower = { version = "0.5" }
tower-http = { features = [
  "cors",
  "limit",
  "set-header",
  "trace",
], version = "0.6" }
tower_governor = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { features = [
  "env-filter",
  "fmt",
  "json",
], version = "0.3" }
# RD-940 — ULID for writer-worker job_id (sortable, no clock skew sensitivity
# vs UUIDv7; we already pull `getrandom` transitively via `alloy`/`rand`).
ulid = { version = "1" }
url = { features = ["serde"], version = "2.5" }

# postgres (optional)
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
# Streaming cursor for eth_getLogs (Cantina #12): PgStore::get_logs streams the
# superset RowStream via query_raw + TryStreamExt rather than buffering LIMIT'd
# pages, so it returns ALL matches with bounded memory. Only used on the pg path.
futures-util = { version = "0.3", optional = true }

# Protocol 0.15.x migration. The conversion metadata moved off the faucet onto
# the bridge's `faucet_metadata_map` (CONFIG_AGG_BRIDGE note), `AccountStorageMode`
# became `AccountType{Private,Public}`, `create_claim_note`/`create_agglayer_faucet`
# were reshaped — see `feat/protocol-0.15-migration`. Base crates are released on
# crates.io at 0.15.3; the matching miden-client is released at 0.15.0 (crates.io,
# 2026-06-12, which tracks base 0.15.3) and pinned below.
#
# MAST-root consistency note (carried over from the 0.14 pins): the proxy-side
# `BurnNote::script_root()` MUST match the miden-node binary's, or every L2→L1
# bridge-out fails in the node's NTX `before_created` handler with
# "note script with root <X> not found". The 0.15 base crates resolve
# miden-assembly/core 0.23.x; keep these in lockstep with the deployed
# miden-node v0.15.x release and tighten to an exact patch if a root mismatch
# resurfaces during the e2e regression. As of 0.15.3 the AggLayer network id is
# a runtime storage slot (set at bridge-account creation), NOT a hardcoded MASM
# constant — so the stock crate's MAST roots now match the stock node binary and
# the network-id=1 vendor patch below is no longer needed (removed).
miden-base-agglayer = { package = "miden-agglayer", version = "=0.15.3" }
miden-protocol = { default-features = false, features = [
  "std",
], version = "=0.15.3" }
miden-standards = { default-features = false, version = "=0.15.3" }
miden-tx = { default-features = false, version = "=0.15.3" }

miden-assembly = { default-features = false, version = "0.23" }
miden-core = { default-features = false, version = "0.23" }

# miden-client 0.15.0 — released to crates.io 2026-06-12, which includes the
# agglayer integration (PR 0xMiden/miden-client#2224, merged 2026-06-12 into the
# release). Re-pinned from the tracking branch `mmagician-claude/agglayer-v0.15`
# now that the tag has shipped; the git source is no longer needed.
miden-client = { default-features = false, features = [
  "tonic",
], version = "=0.15.0" }
miden-client-sqlite-store = { version = "=0.15.0" }

[features]
default = []
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres", "dep:futures-util"]

# NOTE (0.15.3): the previous `[patch.crates-io] miden-agglayer = vendor-...`
# override carried a MASM patch setting MIDEN_NETWORK_ID = 1 (upstream baked 77
# into the MASM). As of 0.15.3 the AggLayer network id is a per-account runtime
# storage slot written at bridge-account creation (`create_bridge_account(..,
# network_id)`), so no MASM patch is needed and the vendor crate was removed.
# The deployment's network id is now passed explicitly at genesis/init time.
