[package]
categories  = ["asynchronous", "network-programming", "web-programming"]
description = "A JSON-RPC extractor for Axum"
edition     = "2021"
homepage    = "https://github.com/0xdeafbeef/axum-jrpc"
keywords    = ["axum", "http", "jrpc", "json-rpc", "web"]
license     = "MIT"
name        = "axum-jrpc"
readme      = "README.md"
repository  = "https://github.com/0xdeafbeef/axum-jrpc"
version     = "0.8.0"

[dependencies]
anyhow     = { optional = true, version = "1.0.75" }
axum       = "0.8.1"
cfg-if     = "1.0.0"
mime       = "0.3.17"
serde      = { features = ["derive"], version = "1.0" }
serde_json = { optional = true, version = "1.0" }
simd-json  = { optional = true, version = "0.14.3" }
thiserror  = "2.0.10"

[features]
anyhow_error = ["anyhow"]
default      = ["serde_json"]
serde_json   = ["dep:serde_json"]
simd         = ["simd-json"]

[dev-dependencies]
anyhow             = "1.0.75"
axum-test          = "17.0.1"
tokio              = { features = ["full"], version = "1.34" }
tracing            = "0.1"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
